# plane-segmentation-from-supervoxel

./: LICENSE  README.md
configs/: 2d_image_sample.conf  3d_sample.conf
outputs/: labeled.pcd
samples/: get_data.py  sample_camera parameter.txt  sample_depth.raw
src/: CMakeLists.txt  configuration.cpp  configuration.h  loader.cpp  loader.h  main.cpp  region_manager.cpp  region_manager.h  utils.cpp  utils.h
